--- a/build.gradle
+++ b/build.gradle
@@ -21,26 +21,26 @@ allure {
 }
 
 repositories {
+    jcenter()
     mavenCentral()
 }
 
 dependencies {
+    implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
     testImplementation 'mysql:mysql-connector-java:8.0.22'
     testImplementation 'com.github.javafaker:javafaker:1.0.2'
     testImplementation 'commons-dbutils:commons-dbutils:1.7'
     testImplementation 'com.codeborne:selenide:5.20.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
-    testImplementation 'io.rest-assured:rest-assured:4.3.3'
-    testImplementation 'io.rest-assured:json-schema-validator:4.3.3'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
     testImplementation 'org.postgresql:postgresql:42.2.19'
-    testImplementation 'io.qameta.allure:allure-selenide:2.13.9'
+    testImplementation 'io.qameta.allure:allure-selenide:2.13.8'
+
+
 }
 
 test {
     useJUnitPlatform()
     systemProperty 'selenide.headless', System.getProperty('selenide.headless')
-    systemProperty 'db.url', System.getProperty('db.url', 'jdbc:mysql://localhost:3306/app')
-    systemProperty 'db.user', System.getProperty('db.user', 'app')
-    systemProperty 'db.pass', System.getProperty('db.pass', 'pass')
+    
 }
