--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,7 +10,7 @@ build: off  # будем использовать свой скрипт сбор
 
 install:
   # запускаем SUT (& означает, что в фоновом режиме - не блокируем терминал для запуска тестов)
-  - ps: $App = Start-Process -FilePath java -ArgumentList "-jar .aqa-shop.jar" -PassThru
+  - ps: $App = Start-Process -FilePath java -ArgumentList "-jar ./aqa-shop.jar" -PassThru
 
 build_script:
   - chmod +x gradlew
