--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,11 @@ dependencies {
 
 test {
     useJUnitPlatform()
-    systemProperty 'selenide.headless', System.getProperty('selenide.headless')
+    systemProperty 'selenide.headless', System.getProperty('selenide.headless', "true")
+    systemProperty 'db.url', System.getProperty('db.url', 'jdbc:mysql://localhost:3306/app')
+    systemProperty 'db.user', System.getProperty('db.user', 'app')
+    systemProperty 'db.pass', System.getProperty('db.pass', 'pass')
+    systemProperty 'app.url', System.getProperty("http://localhost:8080")
+
     
 }
