--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ test {
     systemProperty 'db.url', System.getProperty('db.url', 'jdbc:mysql://localhost:3306/app')
     systemProperty 'db.user', System.getProperty('db.user', 'app')
     systemProperty 'db.pass', System.getProperty('db.pass', 'pass')
-    systemProperty 'app.url', System.getProperty("http://localhost:8080")
+    systemProperty 'app.url', System.getProperty('app.url', 'http://localhost:8080')
 
     
 }
